add exercice profil page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>git readme</title>
 </head>
 <body>
+    <div><a href="html/ma_page_de_profil.html">Ma page de profil</a></div>
     <h1>procedure de création d'un projet git en ligne de commande</h1>
     <div class="underline"><strong>Création du répertoire :</strong>mkdir git_readMe</div>
     <div><strong>Se positionner dans le nouveau repertoire :</strong>cd git_readMe</div>
