--- a/html/contact.html
+++ b/html/contact.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/contact.css" rel="stylesheet"/>
-    <title>Contact</title>
-</head>
-<body>
-    
-</body>
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="../css/contact.css" rel="stylesheet"/>
+  <title>Contact</title>
+ </head>
+ <body>
+  <div class="main">
+   <h1></h1>
+   <p></p>
+   <section>
+    <!-- info -->
+    <div>
+     <!-- adress e-mail anthony-->
+     <div>
+      <div></div>
+      <div></div>
+     </div>
+     <!-- call et contact us gilles-->
+     <div>
+      <div></div>
+      <div></div>
+     </div>
+
+    </div>
+    <!-- map -->
+    <div></div>
+   </section>
+
+  </div>
+
+ </body>
 </html>
