--- a/html/contact.html
+++ b/html/contact.html
@@ -4,24 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../css/contact.css" rel="stylesheet"/>
+  <script src="https://kit.fontawesome.com/6bde6463c9.js" crossorigin="anonymous"></script>
   <title>Contact</title>
  </head>
  <body>
   <div class="main">
-   <h1></h1>
-   <p></p>
+  
    <section>
     <!-- info -->
-    <div>
+    <div class="info-container">
      <!-- adress e-mail anthony-->
-     <div>
-      <div></div>
-      <div></div>
+     <div class="row">
+      <div class="bloc">
+       <i class="fa-solid fa-location-dot icon-circle"></i>
+       <p class="icon-title">ADDRESS :</p>
+       <p class="icon-text">121 Rock street , 21 avenue<br>New York,NY 92103-9000</p>
+      </div>
+      <div class="bloc">
+         <i class="fa-regular fa-envelope icon-circle"></i>
+         <p class="icon-title">EMAIL :</p>
+         <p class="icon-text">
+            <a href="mailto:hello@company.com">hello@company.com</a><br>
+            <a href="mailto:support@company.com">support@company.com</a></p>
+      </div>
      </div>
      <!-- call et contact us gilles-->
-     <div>
-      <div></div>
-      <div></div>
+     <div class="row">
+      <div class="bloc">
+       <i class="fa-solid fa-phone icon-circle"></i>
+       <p class="icon-title">CALL US</p>
+       <p class="icon-text">03 44 76 55 22</p>
+       <p class="icon-text">01 36 75 08 30</p>
+      </div>
+      <div class="bloc">
+       <p class="icon-title">CONTACT US</p>
+       <p class="icon-text">Contact us for a quote. Help or to join the team.</p>
+       <div class="social-networks-icons-list">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-pinterest-p"></i>
+       </div>
+      </div>
      </div>
 
     </div>
