--- a/html/contact.html
+++ b/html/contact.html
@@ -19,9 +19,9 @@
      <!-- adress e-mail anthony-->
      <div class="row">
       <div class="bloc">
-       <i class="fa-solid fa-location-dot icon-circle"></i>
+       <i class="fa-solid fa-location-dot icon-circle icon_circle_white"></i>
        <p class="icon-title">ADDRESS :</p>
-       <p class="icon-text">121 Rock street , 21 avenue<br>New York,NY 92103-9000</p>
+       <p class="icon-text">121 Rock street , 21 avenue,<br>New York,  NY 92103-9000</p>
       </div>
       <div class="bloc">
          <i class="fa-regular fa-envelope icon-circle"></i>
@@ -34,12 +34,12 @@
      <!-- call et contact us gilles-->
      <div class="row">
       <div class="bloc">
-       <i class="fa-solid fa-phone icon-circle"></i>
-       <p class="icon-title">CALL US</p>
-       <p class="icon-text">03 44 76 55 22</p>
-       <p class="icon-text">01 36 75 08 30</p>
+       <i class="fa-solid fa-phone icon-circle icon_circle_white"></i>
+       <p class="icon-title">CALL US :</p>
+       <p class="icon-text">1 (234) 567-891</p>
+       <p class="icon-text">1(234) 987-654</p>
       </div>
-      <div class="bloc">
+      <div class="bloc bloc_contact">
        <p class="icon-title">CONTACT US</p>
        <p class="icon-text">Contact us for a quote. Help or to join the team.</p>
        <div class="social-networks-icons-list">
@@ -55,7 +55,7 @@
     <!-- map -->
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.2527999522!2d-74.14448769434739!3d40.697631233369556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20%C3%89tat%20de%20New%20York%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sfr!4v1695371625561!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+          </div>
    </section>
  </body>
 </html>
